k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reddit-clone-service
  labels:
    app: reddit-clone
spec:
  type: ClusterIP
  selector:
    app: reddit-clone
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
